welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ')' expected but integer literal found.
	return (temp1>100 && temp2<0 ||temp 1<0 && temp2 >100 )
                                            ^